# beagle-dashcam

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/include/: cameraControl.h  joystick.h  shutdown.h  terminate.h  udpNetwork.h
app/src/: cameraControl.cpp  joystick.cpp  main.cpp  shutdown.cpp  terminate.c  terminate.cpp  udpNetwork.cpp
app/src/accelometer/: accelometer.c  tools.c
app/src/accelometer/include/: accelometer.h  tools.h
app/src/cameraDriver/: Makefile  capture.cpp
app/src/cameraDriver/cVersion/: capture.c  runCamera.c
dashcam-server/: package-lock.json  package.json  server.js
dashcam-server/lib/: page.js
dashcam-server/public/: index.html
dashcam-server/public/javascripts/: script.js
dashcam-server/public/stylesheets/: style.css
hal/: CMakeLists.txt
hal/include/hal/: 14Seg.h  accelerometer.h  buzzer.h  cameraTrigger.h  gps.h  joystick.h  microphone.h  motion_sensor.h  sdCard.h
hal/src/: 14Seg.cpp  accelerometer.cpp  buzzer.cpp  cameraTrigger.cpp  gps.cpp  joystick.c  microphone.cpp  motion_sensor.cpp  sdCard.cpp
